WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101350
[BlackBerry] Page can't back to whole screen after zoom out and orientation change
https://bugs.webkit.org/show_bug.cgi?id=101350
Summary
[BlackBerry] Page can't back to whole screen after zoom out and orientation c...
Jacky Jiang
Reported
2012-11-06 07:38:28 PST
PR:229321
Attachments
Patch
(3.37 KB, patch)
2012-11-06 08:42 PST
,
Jacky Jiang
rwlbuis
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-11-06 08:42:35 PST
Created
attachment 172599
[details]
Patch
Rob Buis
Comment 2
2012-11-06 08:52:38 PST
Comment on
attachment 172599
[details]
Patch LGTM.
Jacky Jiang
Comment 3
2012-11-06 10:02:29 PST
Comment on
attachment 172599
[details]
Patch Committed manually
http://trac.webkit.org/changeset/133629
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug