[BlackBerry] Page can't back to whole screen after zoom out and orientation change https://bugs.webkit.org/show_bug.cgi?id=101350

Reviewed by Rob Buis.
Patch by Jacky Jiang  <zhajiang@rim.com>.
Internally reviewed by Arvid Nilsson.

PR: 229321
When rotating device during touch interaction, bitmap zooming was
unexpected ended by resetBitmapZoomScale() so that it couldn't bounce
back. The call resetBitmapZoomScale() is ancient, which just resets the
scale of the bitmap before. Right now it only ends the bitmap zooming
which caused the issue. As UI viewport will be updated by zoomChanged()
right after that, we can remove this trouble maker.
Update the interaction views if the rotation is being changed so that
ZoomHandler can get the updated views.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::zoomAboutPoint):
* Api/WebPageClient.h:

Canonical link: https://commits.webkit.org/119446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133629 268f45cc-cd09-0410-ab3c-d52691b4dbfc